[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jr-dolfin-utils"
version = "0.0.1"
dependencies = [
    "numpy",
]
requires-python = ">=3.7"
authors = [
    {name = "Jørgen Riseth", email="jnriseth@gmail.com"}
]
description = "Various utilities for legacy dolfin"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]

[tool.setuptools]
package-dir = { "" = "src" }


# [flake8]
# max-line-length = 100
# ignore = E122,E123,E126,E127,E128,E731,E722
# exclude = build,jr_dolfin_utils/_version.py,tests,conda.recipe,.git,versioneer.py,benchmarks,.asv
#
#
# [versioneer]
# VCS = git
# versionfile_source = jr_dolfin_utils/_version.py
# versionfile_build = jr_dolfin_utils/_version.py
# tag_prefix =
# parentdir_prefix = jr-dolfin-utils-

# [bdist_wheel]
# universal=1
